@@ -14,30 +14,34 @@
  */
 package com.amazon.sqs.javamessaging.message;
 
-import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.APPROXIMATE_RECEIVE_COUNT;
-import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.JMSX_DELIVERY_COUNT;
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.when;
-
-import javax.jms.JMSException;
-
 import com.amazon.sqs.javamessaging.SQSMessagingClientConstants;
 import com.amazon.sqs.javamessaging.SQSSession;
 import com.amazon.sqs.javamessaging.acknowledge.Acknowledger;
-import com.amazon.sqs.javamessaging.message.SQSMessage;
 import com.amazonaws.services.sqs.model.MessageAttributeValue;
-import org.junit.Before;
-import org.junit.Test;
+import jakarta.jms.JMSException;
+import jakarta.jms.Message;
+import jakarta.jms.MessageFormatException;
+import jakarta.jms.MessageNotWriteableException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import javax.jms.Message;
-import javax.jms.MessageFormatException;
-import javax.jms.MessageNotWriteableException;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-import junit.framework.Assert;
-
-import java.util.*;
+import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.APPROXIMATE_RECEIVE_COUNT;
+import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.JMSX_DELIVERY_COUNT;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.when;
 
 /**
  * Test the SQSMessageTest class
@@ -56,7 +60,7 @@ public class SQSMessageTest {
     final String myCustomString = "myCustomString";
     final String myNumber = "myNumber";
 
-    @Before
+    @BeforeEach
     public void setup() {
         mockSQSSession = mock(SQSSession.class);
     }
@@ -80,53 +84,53 @@ public class SQSMessageTest {
         message.setStringProperty("myString", "StringValue");
         message.setStringProperty("myNumber", "500");
 
-        Assert.assertTrue(message.propertyExists("myTrueBoolean"));
-        Assert.assertEquals(message.getObjectProperty("myTrueBoolean"), true);
-        Assert.assertEquals(message.getBooleanProperty("myTrueBoolean"), true);
+        assertTrue(message.propertyExists("myTrueBoolean"));
+        assertEquals(message.getObjectProperty("myTrueBoolean"), true);
+        assertTrue(message.getBooleanProperty("myTrueBoolean"));
         
-        Assert.assertTrue(message.propertyExists("myFalseBoolean"));
-        Assert.assertEquals(message.getObjectProperty("myFalseBoolean"), false);
-        Assert.assertEquals(message.getBooleanProperty("myFalseBoolean"), false);
+        assertTrue(message.propertyExists("myFalseBoolean"));
+        assertEquals(message.getObjectProperty("myFalseBoolean"), false);
+        assertFalse(message.getBooleanProperty("myFalseBoolean"));
         
-        Assert.assertTrue(message.propertyExists("myInteger"));
-        Assert.assertEquals(message.getObjectProperty("myInteger"), 100);
-        Assert.assertEquals(message.getIntProperty("myInteger"), 100);
+        assertTrue(message.propertyExists("myInteger"));
+        assertEquals(message.getObjectProperty("myInteger"), 100);
+        assertEquals(message.getIntProperty("myInteger"), 100);
         
-        Assert.assertTrue(message.propertyExists("myDouble"));
-        Assert.assertEquals(message.getObjectProperty("myDouble"), 2.1768);
-        Assert.assertEquals(message.getDoubleProperty("myDouble"), 2.1768);
+        assertTrue(message.propertyExists("myDouble"));
+        assertEquals(message.getObjectProperty("myDouble"), 2.1768);
+        assertEquals(message.getDoubleProperty("myDouble"), 2.1768);
         
-        Assert.assertTrue(message.propertyExists("myFloat"));
-        Assert.assertEquals(message.getObjectProperty("myFloat"), 3.1457f);
-        Assert.assertEquals(message.getFloatProperty("myFloat"), 3.1457f);
+        assertTrue(message.propertyExists("myFloat"));
+        assertEquals(message.getObjectProperty("myFloat"), 3.1457f);
+        assertEquals(message.getFloatProperty("myFloat"), 3.1457f);
         
-        Assert.assertTrue(message.propertyExists("myLong"));
-        Assert.assertEquals(message.getObjectProperty("myLong"), 1290772974281L);
-        Assert.assertEquals(message.getLongProperty("myLong"), 1290772974281L);
+        assertTrue(message.propertyExists("myLong"));
+        assertEquals(message.getObjectProperty("myLong"), 1290772974281L);
+        assertEquals(message.getLongProperty("myLong"), 1290772974281L);
         
-        Assert.assertTrue(message.propertyExists("myShort"));
-        Assert.assertEquals(message.getObjectProperty("myShort"), (short) 123);
-        Assert.assertEquals(message.getShortProperty("myShort"), (short) 123);
+        assertTrue(message.propertyExists("myShort"));
+        assertEquals(message.getObjectProperty("myShort"), (short) 123);
+        assertEquals(message.getShortProperty("myShort"), (short) 123);
         
-        Assert.assertTrue(message.propertyExists("myByteProperty"));
-        Assert.assertEquals(message.getObjectProperty("myByteProperty"), (byte) 'a');
-        Assert.assertEquals(message.getByteProperty("myByteProperty"), (byte) 'a');
+        assertTrue(message.propertyExists("myByteProperty"));
+        assertEquals(message.getObjectProperty("myByteProperty"), (byte) 'a');
+        assertEquals(message.getByteProperty("myByteProperty"), (byte) 'a');
         
-        Assert.assertTrue(message.propertyExists("myString"));
-        Assert.assertEquals(message.getObjectProperty("myString"), "StringValue");
-        Assert.assertEquals(message.getStringProperty("myString"), "StringValue");
+        assertTrue(message.propertyExists("myString"));
+        assertEquals(message.getObjectProperty("myString"), "StringValue");
+        assertEquals(message.getStringProperty("myString"), "StringValue");
 
-        Assert.assertTrue(message.propertyExists("myNumber"));
-        Assert.assertEquals(message.getObjectProperty("myNumber"), "500");
-        Assert.assertEquals(message.getStringProperty("myNumber"), "500");
-        Assert.assertEquals(message.getLongProperty("myNumber"), 500L);
-        Assert.assertEquals(message.getFloatProperty("myNumber"), 500f);
-        Assert.assertEquals(message.getShortProperty("myNumber"), (short) 500);
-        Assert.assertEquals(message.getDoubleProperty("myNumber"), 500d);
-        Assert.assertEquals(message.getIntProperty("myNumber"), 500);
+        assertTrue(message.propertyExists("myNumber"));
+        assertEquals(message.getObjectProperty("myNumber"), "500");
+        assertEquals(message.getStringProperty("myNumber"), "500");
+        assertEquals(message.getLongProperty("myNumber"), 500L);
+        assertEquals(message.getFloatProperty("myNumber"), 500f);
+        assertEquals(message.getShortProperty("myNumber"), (short) 500);
+        assertEquals(message.getDoubleProperty("myNumber"), 500d);
+        assertEquals(message.getIntProperty("myNumber"), 500);
 
         // Validate property names
-        Set<String> propertyNamesSet = new HashSet<String>(Arrays.asList(
+        Set<String> propertyNamesSet = Set.of(
                 "myTrueBoolean",
                 "myFalseBoolean",
                 "myInteger",
@@ -136,9 +140,10 @@ public class SQSMessageTest {
                 "myShort",
                 "myByteProperty",
                 "myNumber",
-                "myString"));
+                "myString"
+        );
 
-        Enumeration<String > propertyNames = message.getPropertyNames();
+        Enumeration<String> propertyNames = message.getPropertyNames();
         int counter = 0;
         while (propertyNames.hasMoreElements()) {
             assertTrue(propertyNamesSet.contains(propertyNames.nextElement()));
@@ -147,15 +152,15 @@ public class SQSMessageTest {
         assertEquals(propertyNamesSet.size(), counter);
         
         message.clearProperties();
-        Assert.assertFalse(message.propertyExists("myTrueBoolean"));
-        Assert.assertFalse(message.propertyExists("myInteger"));
-        Assert.assertFalse(message.propertyExists("myDouble"));
-        Assert.assertFalse(message.propertyExists("myFloat"));
-        Assert.assertFalse(message.propertyExists("myLong"));
-        Assert.assertFalse(message.propertyExists("myShort"));
-        Assert.assertFalse(message.propertyExists("myByteProperty"));
-        Assert.assertFalse(message.propertyExists("myString"));
-        Assert.assertFalse(message.propertyExists("myNumber"));
+        assertFalse(message.propertyExists("myTrueBoolean"));
+        assertFalse(message.propertyExists("myInteger"));
+        assertFalse(message.propertyExists("myDouble"));
+        assertFalse(message.propertyExists("myFloat"));
+        assertFalse(message.propertyExists("myLong"));
+        assertFalse(message.propertyExists("myShort"));
+        assertFalse(message.propertyExists("myByteProperty"));
+        assertFalse(message.propertyExists("myString"));
+        assertFalse(message.propertyExists("myNumber"));
 
         propertyNames = message.getPropertyNames();
         assertFalse(propertyNames.hasMoreElements());
@@ -167,27 +172,15 @@ public class SQSMessageTest {
     @Test
     public void testCheckPropertyWritePermissions() throws JMSException {
         SQSMessage msg =  new SQSMessage();
-
-
         msg.checkBodyWritePermissions();
-
         msg.setBodyWritePermissions(false);
 
-        try {
-            msg.checkBodyWritePermissions();
-        } catch (MessageNotWriteableException exception) {
-            assertEquals("Message body is not writable", exception.getMessage());
-        }
+        assertThrows(MessageNotWriteableException.class, msg::checkBodyWritePermissions, "Message body is not writable");
 
         msg.checkPropertyWritePermissions();
-
         msg.setWritePermissionsForProperties(false);
 
-        try {
-            msg.checkPropertyWritePermissions();
-        } catch (MessageNotWriteableException exception) {
-            assertEquals("Message properties are not writable", exception.getMessage());
-        }
+        assertThrows(MessageNotWriteableException.class, msg::checkPropertyWritePermissions, "Message properties are not writable");
     }
 
     /**
@@ -195,33 +188,20 @@ public class SQSMessageTest {
      */
     @Test
     public void testGetPrimitiveProperty() throws JMSException {
-        SQSMessage msg =  spy(new SQSMessage());
-        when(msg.getObjectProperty("testProperty"))
-                .thenReturn(null);
+        SQSMessage msg = spy(new SQSMessage());
+        when(msg.getObjectProperty("testProperty")).thenReturn(null);
 
-        try {
-            msg.getPrimitiveProperty(null, String.class);
-        } catch (NullPointerException npe) {
-            assertEquals("Property name is null", npe.getMessage());
-        }
+        assertThrows(NullPointerException.class, () -> msg.getPrimitiveProperty(null, String.class),
+                "Property name is null");
 
-        try {
-            msg.getPrimitiveProperty("testProperty", List.class);
-        } catch (NumberFormatException exp) {
-            assertEquals("Value of property with name testProperty is null.", exp.getMessage());
-        }
+        assertThrows(NumberFormatException.class, () -> msg.getPrimitiveProperty("testProperty", List.class),
+                "Value of property with name testProperty is null.");
 
-        try {
-            msg.getPrimitiveProperty("testProperty", Double.class);
-        } catch (NullPointerException exp) {
-            assertEquals("Value of property with name testProperty is null.", exp.getMessage());
-        }
+        assertThrows(NullPointerException.class, () -> msg.getPrimitiveProperty("testProperty", Double.class),
+                "Value of property with name testProperty is null.");
 
-        try {
-            msg.getPrimitiveProperty("testProperty", Float.class);
-        } catch (NullPointerException exp) {
-            assertEquals("Value of property with name testProperty is null.", exp.getMessage());
-        }
+        assertThrows(NullPointerException.class, () -> msg.getPrimitiveProperty("testProperty", Float.class),
+                "Value of property with name testProperty is null.");
 
         assertFalse(msg.getPrimitiveProperty("testProperty", Boolean.class));
         assertNull(msg.getPrimitiveProperty("testProperty", String.class));
@@ -232,45 +212,27 @@ public class SQSMessageTest {
      */
     @Test
     public void testSetObjectProperty() throws JMSException {
-        SQSMessage msg =  spy(new SQSMessage());
+        SQSMessage msg = spy(new SQSMessage());
 
-        try {
-            msg.setObjectProperty(null, 1);
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property name can not be null or empty.", exception.getMessage());
-        }
+        assertThrows(IllegalArgumentException.class, () -> msg.setObjectProperty(null, 1),
+                "Property name can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("", 1);
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property name can not be null or empty.", exception.getMessage());
-        }
+        assertThrows(IllegalArgumentException.class, () -> msg.setObjectProperty("", 1),
+                "Property name can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("Property", null);
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property value can not be null or empty.", exception.getMessage());
-        }
+        assertThrows(IllegalArgumentException.class, () -> msg.setObjectProperty("Property", null),
+                "Property value can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("Property", "");
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property value can not be null or empty.", exception.getMessage());
-        }
+        assertThrows(IllegalArgumentException.class, () -> msg.setObjectProperty("Property", ""),
+                "Property value can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("Property", new HashSet<String>());
-        } catch (MessageFormatException exception) {
-            assertEquals("Value of property with name Property has incorrect type java.util.HashSet.",
-                         exception.getMessage());
-        }
+        assertThrows(MessageFormatException.class, () -> msg.setObjectProperty("Property", new HashSet<String>()),
+                "Value of property with name Property has incorrect type java.util.HashSet.");
 
         msg.setWritePermissionsForProperties(false);
-        try {
-            msg.setObjectProperty("Property", "1");
-        } catch (MessageNotWriteableException exception) {
-            assertEquals("Message properties are not writable", exception.getMessage());
-        }
+
+        assertThrows(MessageNotWriteableException.class, () -> msg.setObjectProperty("Property", "1"),
+                "Message properties are not writable");
 
         msg.setWritePermissionsForProperties(true);
         msg.setObjectProperty("Property", "1");
@@ -286,54 +248,53 @@ public class SQSMessageTest {
 
         Acknowledger ack = mock(Acknowledger.class);
 
-        Map<String,String> systemAttributes = new HashMap<String, String>();
-        systemAttributes.put(APPROXIMATE_RECEIVE_COUNT, "100");
+        Map<String,String> systemAttributes = Map.of(APPROXIMATE_RECEIVE_COUNT, "100");
 
-        Map<String, MessageAttributeValue> messageAttributes = new HashMap<String, MessageAttributeValue>();
+        Map<String, MessageAttributeValue> messageAttributes = new HashMap<>();
 
         messageAttributes.put(myTrueBoolean, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.BOOLEAN)
-                                                    .withStringValue("1"));
+                .withDataType(SQSMessagingClientConstants.BOOLEAN)
+                .withStringValue("1"));
 
         messageAttributes.put(myFalseBoolean, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.BOOLEAN)
-                                                    .withStringValue("0"));
+                .withDataType(SQSMessagingClientConstants.BOOLEAN)
+                .withStringValue("0"));
 
         messageAttributes.put(myInteger, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.INT)
-                                                    .withStringValue("100"));
+                .withDataType(SQSMessagingClientConstants.INT)
+                .withStringValue("100"));
 
         messageAttributes.put(myDouble, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.DOUBLE)
-                                                    .withStringValue("2.1768"));
+                .withDataType(SQSMessagingClientConstants.DOUBLE)
+                .withStringValue("2.1768"));
 
         messageAttributes.put(myFloat, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.FLOAT)
-                                                    .withStringValue("3.1457"));
+                .withDataType(SQSMessagingClientConstants.FLOAT)
+                .withStringValue("3.1457"));
 
         messageAttributes.put(myLong, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.LONG)
-                                                    .withStringValue("1290772974281"));
+                .withDataType(SQSMessagingClientConstants.LONG)
+                .withStringValue("1290772974281"));
 
         messageAttributes.put(myShort, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.SHORT)
-                                                    .withStringValue("123"));
+                .withDataType(SQSMessagingClientConstants.SHORT)
+                .withStringValue("123"));
 
         messageAttributes.put(myByte, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.BYTE)
-                                                    .withStringValue("1"));
+                .withDataType(SQSMessagingClientConstants.BYTE)
+                .withStringValue("1"));
 
         messageAttributes.put(myString, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.STRING)
-                                                    .withStringValue("StringValue"));
+                .withDataType(SQSMessagingClientConstants.STRING)
+                .withStringValue("StringValue"));
 
         messageAttributes.put(myCustomString, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.NUMBER + ".custom")
-                                                    .withStringValue("['one', 'two']"));
+                .withDataType(SQSMessagingClientConstants.NUMBER + ".custom")
+                .withStringValue("['one', 'two']"));
 
         messageAttributes.put(myNumber, new MessageAttributeValue()
-                                                    .withDataType(SQSMessagingClientConstants.NUMBER)
-                                                    .withStringValue("500"));
+                .withDataType(SQSMessagingClientConstants.NUMBER)
+                .withStringValue("500"));
 
         com.amazonaws.services.sqs.model.Message sqsMessage = new com.amazonaws.services.sqs.model.Message()
                 .withMessageAttributes(messageAttributes)
@@ -343,58 +304,58 @@ public class SQSMessageTest {
 
         SQSMessage message = new SQSMessage(ack, "QueueUrl", sqsMessage);
 
-        Assert.assertTrue(message.propertyExists(myTrueBoolean));
-        Assert.assertEquals(message.getObjectProperty(myTrueBoolean), true);
-        Assert.assertEquals(message.getBooleanProperty(myTrueBoolean), true);
+        assertTrue(message.propertyExists(myTrueBoolean));
+        assertEquals(message.getObjectProperty(myTrueBoolean), true);
+        assertTrue(message.getBooleanProperty(myTrueBoolean));
 
-        Assert.assertTrue(message.propertyExists(myFalseBoolean));
-        Assert.assertEquals(message.getObjectProperty(myFalseBoolean), false);
-        Assert.assertEquals(message.getBooleanProperty(myFalseBoolean), false);
+        assertTrue(message.propertyExists(myFalseBoolean));
+        assertEquals(message.getObjectProperty(myFalseBoolean), false);
+        assertFalse(message.getBooleanProperty(myFalseBoolean));
 
-        Assert.assertTrue(message.propertyExists(myInteger));
-        Assert.assertEquals(message.getObjectProperty(myInteger), 100);
-        Assert.assertEquals(message.getIntProperty(myInteger), 100);
+        assertTrue(message.propertyExists(myInteger));
+        assertEquals(message.getObjectProperty(myInteger), 100);
+        assertEquals(message.getIntProperty(myInteger), 100);
 
-        Assert.assertTrue(message.propertyExists(myDouble));
-        Assert.assertEquals(message.getObjectProperty(myDouble), 2.1768);
-        Assert.assertEquals(message.getDoubleProperty(myDouble), 2.1768);
+        assertTrue(message.propertyExists(myDouble));
+        assertEquals(message.getObjectProperty(myDouble), 2.1768);
+        assertEquals(message.getDoubleProperty(myDouble), 2.1768);
 
-        Assert.assertTrue(message.propertyExists(myFloat));
-        Assert.assertEquals(message.getObjectProperty(myFloat), 3.1457f);
-        Assert.assertEquals(message.getFloatProperty(myFloat), 3.1457f);
+        assertTrue(message.propertyExists(myFloat));
+        assertEquals(message.getObjectProperty(myFloat), 3.1457f);
+        assertEquals(message.getFloatProperty(myFloat), 3.1457f);
 
-        Assert.assertTrue(message.propertyExists(myLong));
-        Assert.assertEquals(message.getObjectProperty(myLong), 1290772974281L);
-        Assert.assertEquals(message.getLongProperty(myLong), 1290772974281L);
+        assertTrue(message.propertyExists(myLong));
+        assertEquals(message.getObjectProperty(myLong), 1290772974281L);
+        assertEquals(message.getLongProperty(myLong), 1290772974281L);
 
-        Assert.assertTrue(message.propertyExists(myShort));
-        Assert.assertEquals(message.getObjectProperty(myShort), (short) 123);
-        Assert.assertEquals(message.getShortProperty(myShort), (short) 123);
+        assertTrue(message.propertyExists(myShort));
+        assertEquals(message.getObjectProperty(myShort), (short) 123);
+        assertEquals(message.getShortProperty(myShort), (short) 123);
 
-        Assert.assertTrue(message.propertyExists(myByte));
-        Assert.assertEquals(message.getObjectProperty(myByte), (byte) 1);
-        Assert.assertEquals(message.getByteProperty(myByte), (byte) 1);
+        assertTrue(message.propertyExists(myByte));
+        assertEquals(message.getObjectProperty(myByte), (byte) 1);
+        assertEquals(message.getByteProperty(myByte), (byte) 1);
 
-        Assert.assertTrue(message.propertyExists(myString));
-        Assert.assertEquals(message.getObjectProperty(myString), "StringValue");
-        Assert.assertEquals(message.getStringProperty(myString), "StringValue");
+        assertTrue(message.propertyExists(myString));
+        assertEquals(message.getObjectProperty(myString), "StringValue");
+        assertEquals(message.getStringProperty(myString), "StringValue");
 
-        Assert.assertTrue(message.propertyExists(myCustomString));
-        Assert.assertEquals(message.getObjectProperty(myCustomString), "['one', 'two']");
-        Assert.assertEquals(message.getStringProperty(myCustomString), "['one', 'two']");
+        assertTrue(message.propertyExists(myCustomString));
+        assertEquals(message.getObjectProperty(myCustomString), "['one', 'two']");
+        assertEquals(message.getStringProperty(myCustomString), "['one', 'two']");
 
-        Assert.assertTrue(message.propertyExists(myNumber));
-        Assert.assertEquals(message.getObjectProperty(myNumber), "500");
-        Assert.assertEquals(message.getStringProperty(myNumber), "500");
-        Assert.assertEquals(message.getIntProperty(myNumber), 500);
-        Assert.assertEquals(message.getShortProperty(myNumber), (short) 500);
-        Assert.assertEquals(message.getLongProperty(myNumber), 500l);
-        Assert.assertEquals(message.getFloatProperty(myNumber), 500f);
-        Assert.assertEquals(message.getDoubleProperty(myNumber), 500d);
+        assertTrue(message.propertyExists(myNumber));
+        assertEquals(message.getObjectProperty(myNumber), "500");
+        assertEquals(message.getStringProperty(myNumber), "500");
+        assertEquals(message.getIntProperty(myNumber), 500);
+        assertEquals(message.getShortProperty(myNumber), (short) 500);
+        assertEquals(message.getLongProperty(myNumber), 500L);
+        assertEquals(message.getFloatProperty(myNumber), 500f);
+        assertEquals(message.getDoubleProperty(myNumber), 500d);
 
 
         // Validate property names
-        Set<String> propertyNamesSet = new HashSet<String>(Arrays.asList(
+        Set<String> propertyNamesSet = Set.of(
                 myTrueBoolean,
                 myFalseBoolean,
                 myInteger,
@@ -406,9 +367,10 @@ public class SQSMessageTest {
                 myString,
                 myCustomString,
                 myNumber,
-                JMSX_DELIVERY_COUNT));
+                JMSX_DELIVERY_COUNT
+        );
 
-        Enumeration<String > propertyNames = message.getPropertyNames();
+        Enumeration<String> propertyNames = message.getPropertyNames();
         int counter = 0;
         while (propertyNames.hasMoreElements()) {
             assertTrue(propertyNamesSet.contains(propertyNames.nextElement()));
@@ -417,15 +379,15 @@ public class SQSMessageTest {
         assertEquals(propertyNamesSet.size(), counter);
 
         message.clearProperties();
-        Assert.assertFalse(message.propertyExists("myTrueBoolean"));
-        Assert.assertFalse(message.propertyExists("myInteger"));
-        Assert.assertFalse(message.propertyExists("myDouble"));
-        Assert.assertFalse(message.propertyExists("myFloat"));
-        Assert.assertFalse(message.propertyExists("myLong"));
-        Assert.assertFalse(message.propertyExists("myShort"));
-        Assert.assertFalse(message.propertyExists("myByteProperty"));
-        Assert.assertFalse(message.propertyExists("myString"));
-        Assert.assertFalse(message.propertyExists("myNumber"));
+        assertFalse(message.propertyExists("myTrueBoolean"));
+        assertFalse(message.propertyExists("myInteger"));
+        assertFalse(message.propertyExists("myDouble"));
+        assertFalse(message.propertyExists("myFloat"));
+        assertFalse(message.propertyExists("myLong"));
+        assertFalse(message.propertyExists("myShort"));
+        assertFalse(message.propertyExists("myByteProperty"));
+        assertFalse(message.propertyExists("myString"));
+        assertFalse(message.propertyExists("myNumber"));
 
         propertyNames = message.getPropertyNames();
         assertFalse(propertyNames.hasMoreElements());
